[project]
name = "lagrange-python"
version = "0.0.2"
description = "An Python Implementation of NTQQ PC Protocol"
authors = [
    {name="linwenxuan05"},
    {name="wyapx"},
]
dependencies = [
    "typing-extensions>=4.7.0",
    "cryptography>=40.0.0",
]
keywords = ["QQ", "Tencent", "NTQQ", "Framework", "Bot", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.9"

[project.optional-dependencies]
faster = ["ftea>=0.1.5"]
dev = ["pdm", "pdm-backend>=0.3.0"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["lagrange"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
